css/site.css
* {
  box-sizing: border-box;
}

main {
  /* align-items: center; */
  display: flex;
  justify-content: center;
  margin: 0 auto;
  max-width: 960px;
}

#calculator-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  max-width: 600px;
}

#display-container {
  display: flex;
  justify-content: space-between;
  margin-bottom: 5px;
  width: 100%;
}

#clear {
  background-color: #912013;
  font-size: 1.75rem;
  text-align: center;
  width: 10%;
}

#display {
  background-color: #f1f1e6;
  border: 1px solid #000;
  color: #000;
  font-size: 1.75rem;
  padding-right: 5px;
  text-align: right;
  width: 90%;
}

#numbers-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 75%;
}

.center {
  display: flex;
  justify-content: center;
}

#symbols-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 25%;
}

.math-symbol {
  background-color: #034c8c;
  font-size: 2rem;
  margin: 2px 0px 2px 0px;
  padding: 15px;
  width: 100%;
}

.number-row {
  display: flex;
  justify-content: space-between;
}

.number {
  font-size: 2rem;
  margin: 2px 2px 2px 0px;
  padding: 15px;
  width: 33.3333%;
}

button {
  background-color: #717788;
  border: 1px solid #000;
  border-radius: 4px;
  color: #f1f1e6;
}

#equal {
  background-color: #008a61;
}

